Extract androidx version of RecyclerView and CardView into separate variable.

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext {
         glide_version = '4.8.0'
+        androidx_version = '1.0.0'
     }
     repositories {
         google()
